# recommit

./: .gitignore  README.md  pyproject.toml
recommit/: cli.py  git_utils.py  interactive.py  message_generator.py
